# serializer version: 1
# name: test_player_parsing
  Player(
    apps=list([
      PlayedAppUsage(
        application=Application(
          application_id='0100152000022000',
          first_played_date=None,
          has_ugc=None,
          image_url='https://picsum.photos/237/540',
          name='five',
          playing_days=None,
          safe_launch_setting=<SafeLaunchSetting.ALLOW: 'ALLOW'>,
          shop_url=None,
          today_time_played=15,
        ),
        playing_time=15,
      ),
    ]),
    month_summary=dict({
    }),
    nickname='cheyenne19',
    player_id='B276150DE6B18218C09E4D0CE4CFA0861A3',
    player_image='https://placekitten.com/861/237',
    playing_time=15,
  )
# ---
# name: test_player_update_from_daily_summary
  Player(
    apps=list([
      PlayedAppUsage(
        application=Application(
          application_id='010042D00D900000',
          first_played_date=None,
          has_ugc=None,
          image_url='https://picsum.photos/124/516',
          name='government',
          playing_days=None,
          safe_launch_setting=<SafeLaunchSetting.ALLOW: 'ALLOW'>,
          shop_url=None,
          today_time_played=0,
        ),
        playing_time=100,
      ),
    ]),
    month_summary=dict({
    }),
    nickname='cheyenne19',
    player_id='B276150DE6B18218C09E4D0CE4CFA0861A3',
    player_image='https://placekitten.com/861/237',
    playing_time=54321,
  )
# ---
